--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
                 <p>Co do drugiej pasji to zamierzam stworzyć stronę internetową o tematyce gier planszowych.</p>
             </article>
         </header>
+        <section class="projects">
+            <article>
+                <h1>Moje projekty:</h1>
+                <p>Dział w budowie, będą znajdować się tutaj odnośniki do moich projektów.</p>
+            </article>
         </section>
         <footer>
             <h3>Kontakt do mnie:</h3>
