--- a/index.html
+++ b/index.html
@@ -30,10 +30,21 @@
         <footer>
             <h3>Kontakt do mnie:</h3>
             <ul>
-                <li><i class="fa fa-facebook-square" aria-hidden="true"></i></li>
-                <li><i class="fa fa-linkedin-square" aria-hidden="true"></i></li>
-                <li><i class="fa fa-youtube-square" aria-hidden="true"></i></li>
-                <li><i class="fa fa-skype" aria-hidden="true"></i></li>
+                <li>
+                    <a href="https://www.facebook.com/" target="blank" class="blue"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/feed/" target="blank" class="blue"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/?gl=PL" traget="blank" class="red"><i class="fa fa-youtube-square" aria-hidden="true"></i></a>
+                </li>
+                <li>
+                    <a href="skype:example123?chat" class="blue"><i class="fa fa-skype" aria-hidden="true"></i></a>
+                </li>
+                <li>
+                    <a href="mailto:test@test.pl" class="white"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+                </li>
             </ul>
         </footer>
     </div>
